@@ -83,10 +83,6 @@ extern void clear_proceed_status (int step);
 
 extern void proceed (CORE_ADDR, enum gdb_signal);
 
-/* The `resume' routine should only be called in special circumstances.
-   Normally, use `proceed', which handles a lot of bookkeeping.  */
-extern void resume (enum gdb_signal);
-
 /* Return a ptid representing the set of threads that we will proceed,
    in the perspective of the user/frontend.  We may actually resume
    fewer threads at first, e.g., if a thread is stopped at a
